--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>AirBnB clone</title>
 </head>
-<body>
+<body style="margin: 0px;
+            padding: 0px;">
 <header style="background-color: #FF0000;
                height:70px;
                width: 100%">
